--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,14 +4,38 @@ on:
   pull_request:
 
 jobs:
-  test:
+  linux:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/setup-go@v5
         with:
-          go-version: "1.20"
-
+          go-version: "1.21"
       - uses: actions/checkout@v4
-
       - run: go test -race -count=3 -timeout 30m ./...
+
+  mac:
+    runs-on: macos-latest
+    steps:
+      - uses: actions/setup-go@v5
+        with:
+          go-version: "1.21"
+      - uses: actions/checkout@v4
+      - run: go test -race -count=3 -timeout 30m ./...
+
+  win:
+    runs-on: windows-latest
+    steps:
+      - uses: actions/checkout@v4
+      - run: go test -tags invariants -count=3 -timeout 30m ./...
+
+  ego:
+    runs-on: ubuntu-latest
+    container:
+      image: ghcr.io/edgelesssys/ego-dev
+    steps:
+      - uses: actions/checkout@v4
+      - run: ego-go test -c ./internal/edg
+      - run: ego sign edg.test
+      - run: ego run edg.test
+        env:
+          OE_SIMULATION: "1"
